# geant4_powtex

./: .gitignore  CMakeLists.txt  Powtex.cc  README.md  User_guide.md  cpp_environment.yml
analysis/: CreatePowtexTree.C  Extract_branches.C  README.md  ReadLookupTable.C  analysis_powtex.C  compare_detections_biosample.ipynb  plot_detections.ipynb
diagrams/: README.md  class_uml.md  output_analysis_pipeline.md  simulation_data_flow.md
include/: DefineUserGas.hh  PowtexConstruction.hh  PowtexMantelConstruct.ihh  PowtexMaterials.ihh  PrimaryGenerator.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  S_for_Mantel.h  SteppingAction.hh  TrapAdjustParameters.ihh  W_for_Mantel.h
macros/: run.mac  vis.mac  vis_qt_single.mac
scripts/: compile_Powtex_cmake.sh  run_full_analysis.sh
src/: DefineUserGas.cc  PowtexConstruction.cc  PowtexMantelConstruct.icc  PowtexMaterials.icc  PrimaryGenerator.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  SteppingAction.cc
